[project]
name = "audioprocessing"
version = "0.1.0"
description = "Audio processing methods."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
